# TJ-Robot

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ros2-ci.yml
config/: asr.yaml  experiment.yaml  nav2.yaml  nlu.yaml  paths.yaml  slam.yaml  task.yaml  topics.yaml  yolo.yaml
config/interaction/: voice.yaml
config/llm/: orchestration.yaml  system_prompt.txt  tool_schema.yaml
config/manipulation/: mock_arm.yaml
config/navigation/: mapping_navigation.yaml  postmap_navigation.yaml
data/: README.md
docs/: architecture.md  experiment.md  future_development.md  module_design.md  runbook.md  voice_llm_pick_framework.md  代码与功能索引.md  实验原理_建图导航与语义去人.md  实验报告_AI语义识别剔除动态障碍物建图对照.md
robot_bringup/launch/: full_system.launch.py  gazebo.launch.py  interaction.launch.py  nav2.launch.py  perception.launch.py  robot_base.launch.py  run_baseline_mapping.launch.py  run_full_system.launch.py  run_navigation.launch.py  run_search_task.launch.py  run_semantic_mapping.launch.py  run_simulation.launch.py  run_voice_demo.launch.py  slam.launch.py  task_manager.launch.py
robot_bringup/rviz/: robot_system.rviz
robot_core/: __init__.py  action.py  constants.py  event.py  state.py  task.py  topics.py
robot_experiments/: __init__.py
robot_experiments/mapping/: __init__.py  run_baseline.py  run_semantic_mapping.py
robot_experiments/metrics/: __init__.py  experiment_logger.py  map_metrics.py
robot_experiments/navigation/: __init__.py  evaluate_navigation.py
robot_experiments/search/: __init__.py  evaluate_search.py
robot_interaction/: __init__.py
robot_interaction/dialog/: __init__.py  dialog_manager.py
robot_interaction/nlu/: __init__.py  command_parser.py  intent_parser.py
robot_interaction/tts/: tts_node.py
robot_mapping/: __init__.py
robot_mapping/semantic/: __init__.py  dynamic_object_filter.py  person_region_marker_node.py  person_region_store.py  region_accumulator.py  semantic_marker_node.py
robot_mapping/slam/: __init__.py  map_builder_node.py  slam_toolbox_wrapper.py
robot_mapping/storage/: __init__.py  map_loader.py  map_metadata.py  map_saver_node.py
robot_mapping/strip/: __init__.py  occupancy_map_refiner.py  strip_saved_map_person_free.py  strip_service_node.py
robot_navigation/: __init__.py  goal_sender_node.py  nav2_wrapper_node.py  navigation_monitor_node.py  room_navigation.py
robot_perception/: __init__.py
robot_perception/fusion/: __init__.py  perception_fusion_node.py
robot_perception/lidar/: __init__.py  scan_adapter_node.py  scan_filter_node.py
robot_perception/speech/: __init__.py  asr_node.py  wake_word_node.py
robot_perception/vision/: __init__.py  camera_node.py  object_detector_node.py  (+2 more)
robot_tasks/: __init__.py  mapping_task.py  navigation_task.py  patrol_task.py  search_task.py  task_manager_node.py  task_planner.py
ros_ws/: README.md
ros_ws/src/robot_bringup/: CMakeLists.txt  README.md  package.xml
ros_ws/src/robot_bringup/config/: README.md  mapper_params_online_async_full_scan.yaml  mapper_params_online_async_rgbd.yaml  mapper_params_online_async_scan_filtered.yaml  nav2_params_slam.yaml  test1.rviz
ros_ws/src/robot_bringup/config/cartographer/: turtlebot3_rgbd_2d.lua
ros_ws/src/robot_bringup/config/nav2/: base.yaml
ros_ws/src/robot_bringup/config/nav2/profiles/: conservative.yaml  coverage_patrol.yaml
ros_ws/src/robot_bringup/launch/: bringup.launch.py  coverage_patrol.launch.py  full_system.launch.py  gazebo.launch.py  interaction.launch.py  manipulation.launch.py  nav2.launch.py  nav2_coverage_patrol.launch.py  navigation_modes.launch.py  perception.launch.py  rgbd_to_scan.launch.py  robot_base.launch.py  search_task.launch.py  slam.launch.py  slam_laser.launch.py  slam_rgbd.launch.py  slam_rgbd_cartographer.launch.py  task_manager.launch.py  task_pipeline.launch.py  voice_demo.launch.py
ros_ws/src/robot_bringup/maps/: map.pgm  test1.pgm  test1.yaml
ros_ws/src/robot_bringup/models/: README.txt  moving_obstacle.sdf
ros_ws/src/robot_bringup/scripts/: depth_image_to_viz.py  merge_tb3_burger_rgb_urdf.py  merge_tb3_waffle_depth_urdf.py  moving_obstacle_controller.py  prepare_assist_waffle_sdf.py  prepare_burger_rgb_camera_sdf.py  tb3_teleop_keyboard_slam.py
ros_ws/src/robot_bringup/urdf/: burger_rgb_camera.urdf.fragment  waffle_depth_gazebo_fragment.xml  waffle_sim_plugins_gazebo_fragment.xml
ros_ws/src/robot_bringup/world/: small_house.world  test1.world
ros_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/robot_interfaces/msg/: NodeStatus.msg  PersonRegion.msg  PersonRegionArray.msg  TaskGoal.msg  TaskStatus.msg  VoiceCommand.msg
ros_ws/src/robot_interfaces/srv/: ManipulationCommand.srv  NavigationCommand.srv
ros_ws/src/robot_manipulation/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/robot_manipulation/robot_manipulation/nodes/: mock_pick_place_node.py
ros_ws/src/robot_navigation/: package.xml  setup.cfg  setup.py
ros_ws/src/robot_navigation/robot_navigation/: README.md  coverage_patrol.py  coverage_patrol_nav2.py  nav_math.py  point_to_point.py  wall_follow_coverage.py
ros_ws/src/robot_navigation/robot_navigation/nodes/: coverage_patrol.py  coverage_patrol_nav2.py  navigation_command_router.py  point_to_point.py  wall_follow_coverage.py
ros_ws/src/robot_navigation/robot_navigation/utils/: map_save_utils.py
ros_ws/src/robot_navigation/test/: conftest.py  test_map_save_utils.py  test_nav_math.py
ros_ws/src/robot_tasks/: package.xml  setup.cfg  setup.py
ros_ws/src/robot_tasks/robot_tasks/: README.md  task_manager_node.py
ros_ws/src/robot_tasks/robot_tasks/nodes/: task_manager_node.py
saved_maps/: README.txt
scripts/: README.md  bootstrap.sh  build.sh  clean_outputs.sh  common.sh  run_baseline_mapping.sh  run_full_system.sh  run_mapping_laser.sh  run_navigation.sh  run_navigation_postmap.sh  run_search_task.sh  run_semantic_mapping.sh  run_simulation.sh  run_voice_demo.sh  save_map.sh  setup_env.sh  strip_map.sh  tb3_stack.sh
任务单/: 实验原理_建图导航与语义去人.md  实验报告_AI语义识别剔除动态障碍物建图对照.md  阶段一.md
(+43 files in other folders)
