<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Launch and configuration entrypoints for the indoor service robot stack.</description>
  <maintainer email="dev@example.com">TJ-Robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_tasks</exec_depend>
  <exec_depend>robot_interaction</exec_depend>
  <exec_depend>robot_manipulation</exec_depend>
  <exec_depend>human_yolo_seg</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
