<?xml version="1.0"?>
<package format="3">
  <name>robot_interfaces</name>
  <version>0.0.1</version>
  <description>Custom ROS 2 interfaces for the indoor service robot project (stub until rosidl is enabled on an ASCII path).</description>
  <maintainer email="dev@example.com">TJ-Robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
