<?xml version="1.0"?>
<package format="3">
  <name>robot_manipulation</name>
  <version>0.0.1</version>
  <description>Mock pick/place interfaces for task pipeline verification.</description>
  <maintainer email="dev@example.com">TJ-Robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
