<?xml version="1.0"?>
<package format="3">
  <name>robot_tasks</name>
  <version>0.0.1</version>
  <description>Task orchestration and mission logic for the indoor service robot.</description>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

